# event-driven-demos

./: LICENSE  README.md
affine/: CMakeLists.txt  affine.h  eros.h  main.cpp  visual_servoing.h
humanPose/: CMakeLists.txt  Dockerfile  README.MD  edpr-hpe.cpp  kill_hpe.sh  run_hpe.sh
maintenance/: README.MD  hardware_check.md  register_debug.md  software_update.md
movement/: README.md  move_examples.sh
pf-ball-demo/: CMakeLists.txt  app_vGazeDemo2.xml  attend_track_predict.cpp  attend_track_predict.h  houghAlgorithm.cpp  houghAlgorithm.h  module.cpp  module.h  vTrackToRobot.h
visualisation/: ev2_visualizer.xml
